--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@
 # Debug files
 *.dSYM/
 *.su
+*.suo
+MainForm/bin/Debug/MainForm.exe.config
+*.pdb
+*.cache
+MainForm/obj/Debug/MainForm.DataViewControl.resources
+*.resources
+MainForm/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+MainForm/bin/Debug/MainForm.vshost.exe.config
+MainForm/bin/Release/MainForm.exe.config
