--- a/MainForm/MainForm.csproj
+++ b/MainForm/MainForm.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataManager.cs" />
     <Compile Include="DataViewControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
