--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ MainForm/obj/Debug/MainForm.DataViewControl.resources
 MainForm/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 MainForm/bin/Debug/MainForm.vshost.exe.config
 MainForm/bin/Release/MainForm.exe.config
+MainForm/bin/Debug/MainForm.vshost.exe.manifest
